--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,7 +1,7 @@
 <h1>Student Info</h1>
 <ul>
   <li>
-    Name: <%= @student.name %>
+    <%= render 'student' %>
   </li>
   <li>
     Birthday: <%= @student.birthday.strftime("%m/%d/%Y")  %>
